# test1

./: .cursorrules  .gitignore  AGENTS.md  CPOW_CANONICAL.md  LICENSE  README.md  README_CPOW.md  index.html  package.json  pyproject.toml  requirements.txt  styles.css
aetheria/: __init__.py  __main__.py  character.py  combat.py  crafting.py  demo.py  dialogue.py  economy.py  effects.py  events.py  faction.py  gametime.py  items.py  persistence.py  quest.py  rng.py  simulation.py  skills.py  state.py  stats.py  world.py
cpow_api/: README.md  __init__.py  _bootstrap.py  areas.py  auth.py  collab.py  route_helpers.py  server.py  stream.py  world.py  xr.py
cpow_client/: README.md
cpow_engine/: README.md  __init__.py  __main__.py  demo.py  engine.py  models.py  object_factory.py
docs/: AREA_DIPLOMACY.md  AREA_EXTENT_NPC.md  AREA_MODES.md  AREA_SIEGE.md  COLLABORATIVE_WORLD.md  CPOW_ARCHITECTURE.md  CPOW_PHASE2.md  CPOW_ROADMAP.md  CREATION_DESTRUCTION_POWERS.md  HOST_SECURITY.md  L1_PROTOCOL_ARCHITECTURE.md  MOBILE_PUSH_CPOW.md  P0_SECURITY.md  PHYSICS_BALANCE.md  PHYSICS_EXTENDED.md  PUSH_CPOW_DEPLOY_KEY.md  SPLIT_REPO.md  SYNC_CPOW_WORLD.md  SYSTEM_GOVERNANCE.md  TODO_REMAINING.md  XR_INTEGRATION.md
fantasy_mmorpg/: __init__.py  __main__.py  cli.py  content.py  engine.py  models.py
fantasy_monorepo_sims.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fantasy_simulator/: .gitignore  README.md  __init__.py  __main__.py  requirements-api.txt  simulation_engine.py  world_state.json
item_catalog/: app.js  index.html
js_medieval_sim/: index.html  package.json  simulator.js  styles.css
mmorpg_sim/: __init__.py  cli.py  commands.py  data.py  dialogue.py  engine.py  models.py
scripts/: clone_cpow_world.sh  coinglass_orderbook_feed.py  export_cpow_world.sh  split_pine_for_mobile.py  tradingview_orderbook_feed.py  verify.sh  verify_all.sh  (+1 more)
(+623 files in other folders)
