[project]
name = "text-fantasy-mmorpg"
version = "0.1.0"
description = "A detailed medieval fantasy text MMORPG simulator."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Cursor Agent" }]
dependencies = []

[project.scripts]
fantasy-mmorpg = "fantasy_mmorpg.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
